# stocks_patterns_inference

./: .gitignore  .pre-commit-config.yaml  Dockerfile  create_test_csv.py  inference.py  pyproject.toml  test_inference.csv  test_inference.py  test_nginx.py
.github/: README.md
.github/workflows/: black_check.yaml  flake8_check.yaml  pre-commit.yaml
docker/: Dockerfile
src/models/: clustering.py  metrics.py
