[tool.poetry]
name = "stocks-patterns-inference"
version = "0.1.0"
description = ""
authors = ["Nikc-mk <3kaal6@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
pandas = "^2.0.2"
fastapi = "^0.96.0"
mlflow = "^2.3.2"
black = "^23.3.0"
pyupgrade = "^3.4.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.2"
uvicorn = "^0.22.0"
boto3 = "^1.26.147"
tslearn = "^0.5.3.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
target-version = ['py39']
